[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixxx-analyzer"
version = "0.1.1"
description = "Audio track analyzer (BPM, Key, Gain, Intro/Outro) using Mixxx-identical algorithms"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-or-later" }
keywords = ["audio", "bpm", "key", "music", "analysis", "mixxx", "dj"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Intended Audience :: Developers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mixxx_analyzer*"]

[tool.setuptools.package-data]
mixxx_analyzer = ["bin/*"]
